--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Lato;
 }
 
+/*
 h1 {
     font-family: "Arvo";
     font-size:35px;
@@ -10,6 +11,7 @@ h1 {
     padding: 0px;
     margin-left: 20px;
 }
+*/
 
 .info {
     margin-left: 20px;
@@ -80,6 +82,22 @@ h1 {
     left: 100%;
 }
 
-ul.no-bullet {
-    list-style-type: none;
+.gubbin-nav {
+    position: absolute;
+    left: 0px;
+}
+
+.visualization {
+}
+
+.loading-vis {
+  width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.about {
+    max-width: 46rem;
+    margin-top: 30px;
 }
