--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,9 @@ body {
 
 .loading-vis {
   width: 75%;
+}
+
+.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -102,4 +105,8 @@ body {
 
 .sidebar .nav {
     margin-bottom: 0px;
+}
+
+.top-margin {
+    margin-top: 100px;
 }
