--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,18 +73,18 @@ body {
 }
 
 .visualization {
-  min-height: 50rem;
-  width: 100%;
+    min-height: 50rem;
+    width: 100%;
 }
 
 .loading-vis {
-  width: 75%;
+    width: 75%;
 }
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .about {
@@ -116,20 +116,20 @@ body {
     background-color: #ddd;
 }
 
-.gubbin-selected-0 {
-    background-color: #f00 !important;
+.gubbin-selected {
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
-.gubbin-selected-1 {
-    background-color: #0f0 !important;
-}
-
-.gubbin-selected-2 {
-    background-color: #00f !important;
+.legend {
+    position: absolute;
+    border: 1px solid #d3d3d3;
+    z-index: 10;
+    cursor: move;
+    background-color: #fff;
+    padding: 20px;
 }
 
 polyline {
-  fill: none;
-  stroke: #000;
-  stroke-width: 3px;
+    fill: none;
+    stroke-width: 3px;
 }
