breaking out comparison plot and scatter plot source

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,11 @@ body {
     width: 100%;
 }
 
+.small-visualization {
+    min-height: 25rem;
+    width: 100%;
+}
+
 .loading-vis {
     width: 75%;
 }
