--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,3 +179,19 @@ polyline {
     cursor: pointer;
     padding: 20px;
 }
+
+
+.failure{
+    fill: #de2d26;
+    color: #de2d26;
+    font-size: 20px;
+    stroke-width: 25px;
+}
+
+.successful{
+    fill: #3182bd;
+    color: #3182bd;
+    font-size: 20px;
+    stroke-width: 25px;
+
+}
