--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,3 +222,21 @@ polyline {
     stroke-width: 1.25px;
     cursor: crosshair;
 }
+
+.video-wrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
